bug squashing

--- a/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
+++ b/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
@@ -54,6 +54,10 @@ h4 {
     color: lightgray !important;
 }
 
+.right-most-buttom {
+    float: right
+}
+
 .swap-equipment-buttons {
     display: flex;
     justify-content: space-between;
